# website

./: Cargo.toml  README.md  docker-compose.yml  justfile
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  funding.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-docs-bug.yml  3-feature-request.yml  4-enhancement-request.yml
server/: Cargo.toml
server/src/: app.rs  db.rs  errors.rs  main.rs  response.rs  router.rs  shutdown.rs  tracing.rs  var.rs
server/src/middleware/: mod.rs  session.rs
server/src/results/: user.rs
server/src/routes/auth/: callback.rs  login.rs  mod.rs
