[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
tracing = "0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter", "json"] }
tokio = { version = "=1.41.1", features = ["net", "signal", "io-std", "io-util", "rt-multi-thread", "macros", "process"] }
axum = { version = "=0.7.7", features = ["macros", "matched-path"] }
axum-extra = { version = "=0.9.4", features = ["cookie-signed", "typed-header"] }
dotenvy = "0.15.7"
json-subscriber = "0.2.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
oauth2 = "4.4.2"
base64 = "0.22.1"
cookie = { version = "0.18.1", features = ["secure"] }
tower = "=0.5.1"
tower-http = { version = "=0.6.1", features = ["add-extension", "fs", "catch-panic", "timeout", "compression-full"] }
parking_lot = "0.12.3"
